# Scaling-Functions-Helper

./: CMakeLists.txt  CMakeLists_bak.txt  LICENSE.md  README.md  scalingFunction3d.cpp  scalingFunction3d.hpp  setup.py  test.py
cmake/: FindOpenBLAS.cmake  scalingFunctionsHelperConfig.cmake.in
src/: diffOptHelper.cpp  diffOptHelper.hpp  ellipsoid2d.cpp  ellipsoid2d.hpp  ellipsoid3d.cpp  ellipsoid3d.hpp  hyperplane2d.cpp  hyperplane2d.hpp  hyperplane3d.cpp  hyperplane3d.hpp  logSumExp2d.cpp  logSumExp2d.hpp  logSumExp3d.cpp  logSumExp3d.hpp  pybind.cpp  rimonMethod.cpp  rimonMethod.hpp  scalingFunction2d.cpp  scalingFunction2d.hpp  scalingFunction3d.cpp  scalingFunction3d.hpp  smoothMinimum.cpp  smoothMinimum.hpp  superquadrics3d.cpp  superquadrics3d.hpp
src_bak/: diffOptHelper.hpp  ellipsoid2d.cpp  ellipsoid2d.hpp  ellipsoid3d.hpp  hyperplane2d.cpp  hyperplane2d.hpp  hyperplane3d.hpp  logSumExp2d.cpp  logSumExp2d.hpp  logSumExp3d.hpp  pybind.cpp  rimonMethod.cpp  rimonMethod.hpp  scalingFunction2d.hpp  scalingFunction3d.cpp  scalingFunction3d.hpp  smoothMinimum.cpp  superquadrics3d.hpp
test_correctness/: ellipsoid2d.py  ellipsoid2ellipsoid2d.py  ellipsoid2ellipsoid3d.py  ellipsoid2ellipsoid3dMoving.py  ellipsoid3d.py  hyperplane2d.py  hyperplane3d.py  logsumexp2d.py  logsumexp3d.py  smooth_min.py  superquadrics3d.py
test_derivation/: P_ders2d.py  P_ders3d.py  superquadrics.py
